--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
   <!-- Sitemap -->
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
+  <!--meta name="google-site-verification" content="OWywmq9XXAUGOdk2RBSIsugOyf7J6fnY9xJVONZvE5w" /-->
+  <meta name="google-site-verification" content="lIagwjIhmmKKkl4yhO9MIs5aE0zZ9UTju9iClXQ7TzA" />
+
+  <meta name="msvalidate.01" content="3AECC9422CD7F46B50E1534148347F8D" />
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
