--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rev="made" href="mailto:info@sirmotec.com">
 
   <meta name="description" content="Consultoría, desarrollo, diseño e implantación de soluciones IOT"/>
-  <meta name="keywords" content="FIWARE, GIS, IOT, Smart City, Movilidad"/>
+  <meta name="keywords" content="FIWARE, GIS, IOT, Smart City, Geolocalización"/>
   <meta name="Resource-type" content="Homepage"/>
   <meta name="DateCreated" content="Thu, 28 February 2019 00:00:00 GMT"/>
 
@@ -69,9 +69,10 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">SIRMOTEC</a>
+
+      <a id="logo-container" href="assets/favicon.png" class="brand-logo"><i class="material-icons">menu</i>SIRMOTEC</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#"><i class="material-icons">menu</i></a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -85,9 +86,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Sirmotec</h1>
+        <h1 class="header center teal-text text-lighten-2">SIRMOTEC</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Consultoría, desarrollo, diseño e implantación de soluciones Smart City</h5>
+          <h5 class="header col s12 light" style="color:white;opacity:0.0" >Consultoría, desarrollo, diseño e implantación de soluciones Smart City</h5>
         </div>
         <div class="row center">
           <!--a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a-->
@@ -96,7 +97,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC"></div>
+    <div class="parallax"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
   </div>
 
 
@@ -105,25 +106,25 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">GIS</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Geolocalización</h5>
 
             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Easy to work with</h5>
@@ -131,6 +132,16 @@
             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
           </div>
         </div>
+
+        <div class="col s12 m3">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -141,11 +152,11 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light" style="color:white;opacity:0.0">A modern responsive front-end framework based on Material Design</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="assets/words2.jpg" alt="sirmoec servicios img 2"></div>
   </div>
 
   <div class="container">
@@ -154,8 +165,9 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>Contacto</h4>
+          <!--p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p-->
+          <a class="left-align light" href="mailto:info@sirmotec.com">info@sirmotec.com</a>
         </div>
       </div>
 
@@ -177,12 +189,12 @@
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <!--div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
           <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
 
-        </div>
+        </div-->
         <!--div class="col l3 s12">
           <h5 class="white-text">Settings</h5>
           <ul>
@@ -193,14 +205,14 @@
           </ul>
         </div-->
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Conecta</h5>
           <ul>
-            <li><a class="white-text" href="https://twitter.com/SIRMO_TEC">twitter</a></li>
+            <li><a class="white-text" style="color:white;opacity:0.0" href="https://twitter.com/SIRMO_TEC">twitter</a></li>
             <li><a class="white-text" href="https://www.linkedin.com/company/sirmotec">linkedin</a></li>
-            <li><a class="white-text" href="https://www.youtube.com/channel/UClOipgwwh54abPraOkTBH8w">youtube</a></li>
+            <li><a class="white-text" style="color:white;opacity:0.0" href="https://www.youtube.com/channel/UClOipgwwh54abPraOkTBH8w">youtube</a></li>
             <li><a class="white-text" href="https://www.facebook.com/Sirmotec-110445933892759">facebook</a></li>
-            <li><a class="white-text" href="https://www.webwiki.com/sirmotec.com">webwiki</a></li>
-            <li><a class="white-text" href="mailto:info@sirmotec.com">info@sirmotec.com</a></li>
+            <li><a class="white-text" style="color:white;opacity:0.0" href="https://www.webwiki.com/sirmotec.com">webwiki</a></li>
+            <li><a class="white-text" style="color:white;opacity:0.0" href="mailto:info@sirmotec.com">info@sirmotec.com</a></li>
           </ul>
         </div>
       </div>
