--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
 
 </head>
 <body>
-  <nav class="white" role="navigation">
+  <!--nav class="white" role="navigation">
     <div class="nav-wrapper container">
-
-      <a id="logo-container" href="assets/favicon.png" class="brand-logo"><i class="material-icons">menu</i>SIRMOTEC</a>
+      <img src="assets/favicon.png" alt="SIRMOTEC Logo" style="float:left;width:42px;height:42px;">
+      <a id="logo-container" href="" class="brand-logo">SIRMOTEC</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#"><i class="material-icons">menu</i></a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">Menu</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+  </nav-->
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">SIRMOTEC</h1>
+        <h1 class="header center teal-text text-lighten-2" style="color:white;opacity:0.0">SIRMOTEC</h1>
         <div class="row center">
           <h5 class="header col s12 light" style="color:white;opacity:0.0" >Consultoría, desarrollo, diseño e implantación de soluciones Smart City</h5>
         </div>
@@ -219,7 +219,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-       Hecho por <a class="brown-text text-lighten-3" href="https://www.sirmotec.com">Sirmotec</a>
+       Copyright <a class="brown-text text-lighten-3" href="https://www.sirmotec.com">SIRMOTEC</a> 2020. All Rights Reserved.
       </div>
     </div>
   </footer>
