--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
       <div class="row">
         <div class="col s12 m3">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">map</i></h2>
             <h5 class="center">GIS</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">En una sociedad donde la información y la tecnología son dos de los pilares fundamentales, los SIG son, sin lugar a dudas, la tecnología estandarte para el manejo de información geográfica, y los elementos básicos que canalizan la gestión de todo aquello que, de un modo u otro, presente una componente geográfica susceptible de ser aprovechada.</p>
           </div>
         </div>
 
         <div class="col s12 m3">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">location_on</i></h2>
             <h5 class="center">Geolocalización</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Saber dónde está cada vehículo, en cada momento. A diferencia de una oficina convencional donde todos los empleados trabajan en un mismo espacio, los empleados de una empresa de transporte están en constante movimiento y a lo largo de grandes áreas de territorio. A través de la geolocalización a través de GPS en tiempo real los gestores de flotas pueden saber dónde está cada vehículo en cada momento.</p>
           </div>
         </div>
 
         <div class="col s12 m3">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons">fingerprint</i></h2>
+            <h5 class="center">Fichaje</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Los trabajadores también son importantes y para ellos este sistema también tiene ventajas ya que les ayuda a tener consciencia del tiempo trabajado y de esta manera poder planificar su jornada laboral con su vida familiar. Los trabajadores temporales también deberán estar registrados para su cotización y su remuneración ya que aunque trabajen menos horas tienen los mismos derechos.</p>
           </div>
         </div>
 
