--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
+  <script src="https://kit.fontawesome.com/ab2c04db5c.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <!--nav class="white" role="navigation">
@@ -97,7 +99,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
+    <div class="parallax valign-wrapper mySelector responsive-img"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
   </div>
 
 
@@ -167,9 +169,15 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contacto</h4>
           <!--p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p-->
-          <a class="left-align light" href="mailto:info@sirmotec.com">info@sirmotec.com</a>
+          <a class="left-align flow-text" href="mailto:info@sirmotec.com">info@sirmotec.com</a>
         </div>
       </div>
+
+      <div class="icon">
+        <i class="fa fa-linkedin circle light-blue darken-4"></i>
+      </div>
+
+      <a class="waves-effect waves-light btn"><i class="fa fa-linkedin fa-fw"></i> Linkedin</a>
 
     </div>
   </div>
@@ -215,8 +223,11 @@
             <li><a class="white-text" style="color:white;opacity:0.0" href="mailto:info@sirmotec.com">info@sirmotec.com</a></li>
           </ul>
         </div>
+
       </div>
+
     </div>
+
     <div class="footer-copyright">
       <div class="container">
        Copyright <a class="brown-text text-lighten-3" href="https://www.sirmotec.com">SIRMOTEC</a> 2020. All Rights Reserved.
