--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
 
         <div class="col s12 m3">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <!--h2 class="center brown-text"><i class="material-icons">settings</i></h2-->
+            <h2 class="center brown-text"><img src="https://pbs.twimg.com/profile_images/441204205110317057/QmIYouY7_400x400.png" style="float:top;width:42px;height:42px;" alt="fiware icon"></h2>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h5 class="center">FIWARE</h5>
+
+            <p class="light">plataforma open source de temática libre a partir de estándares propios que permite integrar diferentes aplicaciones desarrolladas por diferentes empresas, con el objetivo de mejorar la competitividad de los productos y a su vez la calidad de vida de los ciudadanos.</p>
           </div>
         </div>
 
@@ -172,12 +174,6 @@
           <a class="left-align flow-text" href="mailto:info@sirmotec.com">info@sirmotec.com</a>
         </div>
       </div>
-
-      <div class="icon">
-        <i class="fa fa-linkedin circle light-blue darken-4"></i>
-      </div>
-
-      <a class="waves-effect waves-light btn"><i class="fa fa-linkedin fa-fw"></i> Linkedin</a>
 
     </div>
   </div>
@@ -230,7 +226,7 @@
 
     <div class="footer-copyright">
       <div class="container">
-       Copyright <a class="brown-text text-lighten-3" href="https://www.sirmotec.com">SIRMOTEC</a> 2020. All Rights Reserved.
+       Copyright <a class="brown-text text-lighten-3" href="https://www.sirmotec.com">SIRMOTEC</a> 2019. All Rights Reserved.
       </div>
     </div>
   </footer>
