--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-  <script src="https://kit.fontawesome.com/ab2c04db5c.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
   <!--nav class="white" role="navigation">
@@ -99,12 +97,12 @@
 
       </div>
     </div>
-    <div class="parallax valign-wrapper mySelector responsive-img"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
+    <div class="parallax valign-wrapper responsive-img hoverable" style="object-fit: contain;"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
   </div>
 
 
   <div class="container">
-    <div class="section">
+    <!--div class="section"-->
 
       <!--   Icon Section   -->
       <div class="row">
@@ -113,7 +111,7 @@
             <h2 class="center brown-text"><i class="material-icons">map</i></h2>
             <h5 class="center">GIS</h5>
 
-            <p class="light">En una sociedad donde la información y la tecnología son dos de los pilares fundamentales, los SIG son, sin lugar a dudas, la tecnología estandarte para el manejo de información geográfica, y los elementos básicos que canalizan la gestión de todo aquello que, de un modo u otro, presente una componente geográfica susceptible de ser aprovechada.</p>
+            <p class="light flow-text">En una sociedad donde la información y la tecnología son dos de los pilares fundamentales, los SIG son, sin lugar a dudas, la tecnología estandarte para el manejo de información geográfica, y los elementos básicos que canalizan la gestión de todo aquello que, de un modo u otro, presente una componente geográfica susceptible de ser aprovechada.</p>
           </div>
         </div>
 
@@ -122,7 +120,7 @@
             <h2 class="center brown-text"><i class="material-icons">location_on</i></h2>
             <h5 class="center">Geolocalización</h5>
 
-            <p class="light">Saber dónde está cada vehículo, en cada momento. A diferencia de una oficina convencional donde todos los empleados trabajan en un mismo espacio, los empleados de una empresa de transporte están en constante movimiento y a lo largo de grandes áreas de territorio. A través de la geolocalización a través de GPS en tiempo real los gestores de flotas pueden saber dónde está cada vehículo en cada momento.</p>
+            <p class="light flow-text">Saber dónde está cada vehículo, en cada momento. A diferencia de una oficina convencional donde todos los empleados trabajan en un mismo espacio, los empleados de una empresa de transporte están en constante movimiento y a lo largo de grandes áreas de territorio. A través de la geolocalización a través de GPS en tiempo real los gestores de flotas pueden saber dónde está cada vehículo en cada momento.</p>
           </div>
         </div>
 
@@ -131,7 +129,7 @@
             <h2 class="center brown-text"><i class="material-icons">fingerprint</i></h2>
             <h5 class="center">Fichaje</h5>
 
-            <p class="light">Los trabajadores también son importantes y para ellos este sistema también tiene ventajas ya que les ayuda a tener consciencia del tiempo trabajado y de esta manera poder planificar su jornada laboral con su vida familiar. Los trabajadores temporales también deberán estar registrados para su cotización y su remuneración ya que aunque trabajen menos horas tienen los mismos derechos.</p>
+            <p class="light flow-text">Los trabajadores también son importantes y para ellos este sistema también tiene ventajas ya que les ayuda a tener consciencia del tiempo trabajado y de esta manera poder planificar su jornada laboral con su vida familiar. Los trabajadores temporales también deberán estar registrados para su cotización y su remuneración ya que aunque trabajen menos horas tienen los mismos derechos.</p>
           </div>
         </div>
 
@@ -142,13 +140,13 @@
 
             <h5 class="center">FIWARE</h5>
 
-            <p class="light">plataforma open source de temática libre a partir de estándares propios que permite integrar diferentes aplicaciones desarrolladas por diferentes empresas, con el objetivo de mejorar la competitividad de los productos y a su vez la calidad de vida de los ciudadanos.</p>
+            <p class="light flow-text">Plataforma open source de temática libre a partir de estándares propios que permite integrar diferentes aplicaciones desarrolladas por diferentes empresas, con el objetivo de mejorar la competitividad de los productos y a su vez la calidad de vida de los ciudadanos.</p>
           </div>
         </div>
 
       </div>
 
-    </div>
+    <!--/div-->
   </div>
 
 
@@ -156,7 +154,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light" style="color:white;opacity:0.0">A modern responsive front-end framework based on Material Design</h5>
+          <!--h5 class="header col s12 light" style="color:white;opacity:0.0">Consultoría, desarrollo, diseño e implantación de soluciones Smart City</h5-->
         </div>
       </div>
     </div>
@@ -171,7 +169,7 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contacto</h4>
           <!--p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p-->
-          <a class="left-align flow-text" href="mailto:info@sirmotec.com">info@sirmotec.com</a>
+          <a class="left-align flow-text" href="mailto:info@sirmotec.com"><span class="teal-text text-teal-2">info@sirmotec.com</span></a>
         </div>
       </div>
 
@@ -192,35 +190,29 @@
 
   <footer class="page-footer teal">
     <div class="container">
-      <div class="row">
-        <!--div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
-
-        </div-->
-        <!--div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div-->
-        <div class="col l3 s12">
-          <h5 class="white-text">Conecta</h5>
-          <ul>
-            <li><a class="white-text" style="color:white;opacity:0.0" href="https://twitter.com/SIRMO_TEC">twitter</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/company/sirmotec">linkedin</a></li>
-            <li><a class="white-text" style="color:white;opacity:0.0" href="https://www.youtube.com/channel/UClOipgwwh54abPraOkTBH8w">youtube</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/Sirmotec-110445933892759">facebook</a></li>
-            <li><a class="white-text" style="color:white;opacity:0.0" href="https://www.webwiki.com/sirmotec.com">webwiki</a></li>
-            <li><a class="white-text" style="color:white;opacity:0.0" href="mailto:info@sirmotec.com">info@sirmotec.com</a></li>
-          </ul>
+        <div class="row">
+          <div class="col s1"></div>
+          <div class="col s1"></div>
+          <div class="col s1"></div>
+          <div class="col s1"></div>
+          <div class="col s1"></div>
+          <div class="col s1"></div>
+          <div class="col s1"><a class="white-text" style="color:white;opacity:0.0" href="mailto:info@sirmotec.com">info@sirmotec.com</a></div>
+          <div class="col s1"><a class="white-text" style="color:white;opacity:0.0" href="https://www.webwiki.com/sirmotec.com">webwiki</a></div>
+          <div class="col s1"><a class="white-text" style="color:white;opacity:0.0" href="https://twitter.com/SIRMO_TEC">twitter</a></div>
+          <div class="col s1"><a class="white-text" style="color:white;opacity:0.0" href="https://www.youtube.com/channel/UClOipgwwh54abPraOkTBH8w">youtube</a></div>
+          <div class="col s1">
+            <a class="white-text right-align" href="https://www.linkedin.com/company/sirmotec">
+                <img class="hoverable" src="assets/linkedin.svg" style="float:right;width:32px;height:32px;" alt="linkedin icon">
+            </a>
+          </div>
+          <div class="col s1">
+            <a class="white-text" href="https://www.facebook.com/Sirmotec-110445933892759">
+                <img class="hoverable" src="assets/facebook.svg" style="float:right;width:32px;height:32px;" alt="facebook icon">
+            </a>
+          </div>
         </div>
-
-      </div>
 
     </div>
 
