--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       </div>
     </div>
-    <div class="valign-wrapper responsive-img alligator-turtle"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
+    <div class="parallax valign-wrapper responsive-img alligator-turtle"><img src="assets/Logo-SIRMOTEC.jpg" alt="Logo SIRMOTEC img 1"></div>
   </div>
 
 
